GramáticaLibreContexto.txt
S ::= INICIO

INICIO ::= INSTRUCCION INICIO'
INICIO ::= INSTRUCCION INICIO'
INICIO' ::= epsilon 

INSTRUCCION ::= RESULTADO
                | JORNADA
                | GOLES
                | TABLA
                | PARTIDOS
                | TOP

RESULTADO ::= resultado cadenaComillas vs cadenaComillas temporada cadenamenorQuemayorQue

JORNADA ::= jornada numero temporada cadenamenorQuemayorQue (banderaF nombreArchivo)*

GOLES  ::= goles CONDICION_GOLES cadenaComillas temporada cadenamenorQuemayorQue

TABLA ::= tabla temporada cadenamenorQuemayorQue (banderaF nombreArchivo)*

PARTIDOS ::= partidos cadena temporada cadenamenorQuemayorQue (banderaF nombreArchivo)* (banderaJi numero)* (banderaJf numero)*

TOP ::= top CONDICION_TOP temporada cadenamenorQuemayorQue (banderaN numero)*

CONDICION_GOLES ::= local
            | visitante
            | total
        
CONDICION_TOP::= superior
                | inferior
            
